Spacing/styling fix for home page
The spacing and styling was off for the "our work" section of the home
page. This was due to a mis-reading and misapplication of classes and
thus also css styles. This also adds new microformats that actually make
sense.

--- a/assets/_sass/_custom.scss
+++ b/assets/_sass/_custom.scss
@@ -15,7 +15,7 @@ $tiniest: new-breakpoint(max-width 390px);
 
 // Site-wide media queries
 //********************************************************
-.mantra, .blog-entry, .page-content, .team, .footer, .contact-box {
+.mantra, .blog-entry, .service-entry, .team, .footer, .contact-box {
 	@include media($small) {
     	padding-left: 5%;
     	padding-right: 5%;
@@ -415,7 +415,7 @@ $tiniest: new-breakpoint(max-width 390px);
 	}
 }
 
-.blog-entry, .page-content {
+.blog-entry, .service-entry {
 	@extend %section-padding; //standard padding for all sections
 	padding-top: 25px; //compensates for padding in top row of news section
 	h1 {
@@ -439,17 +439,7 @@ $tiniest: new-breakpoint(max-width 390px);
 	}
 }
 
-.page-content {
-	@extend %section-padding; //standard padding
-	padding-top: 12px;
-	padding-bottom: 0;
-	p {
-	  + p {
-	    margin: 1em 0;
-	  }
-	}
-}
-.blog-title {
+.blog-title, .service-title {
 	@include span-columns(12);
 	padding: 15px 0 5px 0;
 	@include media($tiniest) {
